# gooroom-notice-plugin

./: Makefile.am  configure.ac.in
debian/: changelog  control  copyright  rules
icons/: Makefile.am
icons/22x22/status/: Makefile.am
icons/scalable/apps/: Makefile.am
panel-plugin/: Makefile.am  gooroom-notice-plugin.c  gooroom-notice-plugin.desktop.in.in  gooroom-notice-plugin.h  gooroom-notice-popup.c
po/: POTFILES.in  POTFILES.skip  en_US.po  ko.po
